syntax = "proto3";
package whatTime;
option go_package = "proto/proto.proto";

service ChittyChat {
    rpc Join (JoinRequest) returns (stream Message);
    rpc Publish (Message) returns (Empty);
}

message JoinRequest {
    string user = 1;
    int64 lamportClock = 2;
}

message Message {
    string user = 1;
    string message = 2;
    int64 lamportClock = 3;
}

message Empty {}
